# squirrel-scanner

./: .gitignore  Cargo.toml  do-selfupdate.py  infrastructure-checker.py  install-systemd-service.py  install-systemd-services.py  model-trainer.py  readme.md  ssh.sh
src/: camera.rs  main.rs  utils.rs  web.rs  web_index.html  web_style.css
