[package]
name = "squirrel-scanner"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
procfs = "0.15"

[dependencies.v4l]
version = "0.14"
# libv4l (old) and v4l2 (new) are mutually exclusive! TODO see which one our camera talks best to.
# features = [ "libv4l" ]
# default-features = false


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

