[package]
name = "squirrel-scanner"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
procfs = "0.15"
image = "0.25"
mime = "0.3"
lazy_static = "1.5"
rayon = "1.10"
imageproc = "0.25"
ab_glyph = "0.2"
chrono = "0.4"
atomic_float = "1.0"
reqwest = "0.12"

# ONNX runtime
ort = "2.0.0-rc.4"
ndarray = "0.15"

[dependencies.v4l]
version = "0.14"
# libv4l (old) and v4l2 (new) are mutually exclusive! TODO see which one our camera talks best to.
# features = [ "libv4l" ]
# default-features = false

[dependencies.actix-web]
version = "4"


[profile.release]
lto = "fat"
codegen-units = 1
# panic = "abort"

